--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,5 +10,10 @@
   {%- endif -%}
 
   {%- include custom-head.html -%}
+  {% if page.usemathjax %}
+  <script type="text/javascript" async
+   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+    </script>
+  {% end if %}
   
 </head>
