--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,10 +10,15 @@
   {%- endif -%}
 
   {%- include custom-head.html -%}
+  
+  <!-- for mathjax support -->
   {% if page.usemathjax %}
-  <script type="text/javascript" async
-   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({
+      TeX: { equationNumbers: { autoNumber: "AMS" } }
+      });
     </script>
-  {% end if %}
+    <script type="text/javascript" async src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+  {% endif %}
   
 </head>
