--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,10 @@
 
   {%- include custom-head.html -%}
   
+  <!-- Mathjax Support -->
+  <script type="text/javascript" async
+    src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+  </script>
 
   
 </head>
